--- a/webapp/src/app/app.component.html
+++ b/webapp/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-dashboard></app-dashboard>
+<div class="nav">
+    <app-main-nav></app-main-nav>
+</div>
+<div class="content">
+  <h3>{{title}}</h3>
+  <router-outlet></router-outlet>
+</div>
