Prepare basic components for navigation

--- a/webapp/src/app/main-nav/main-nav.component.html
+++ b/webapp/src/app/main-nav/main-nav.component.html
@@ -1,1 +1,16 @@
-<p>Test test test</p>
+<div class="nav">
+  <ul>
+    <li>
+      <a routerLink="/home" routerLinkActive="active">Strona Główna</a>
+    </li>
+    <li>
+      <a routerLink="/section" routerLinkActive="active">Działy</a>
+    </li>
+    <li>
+      <a routerLink="/matura" routerLinkActive="active">Matura</a>
+    </li>
+    <li>
+      <a routerLink="/try-yourself" routerLinkActive="active">Sprawdź Się!</a>
+    </li>
+  </ul>
+</div>
