Basic routing for section component

--- a/webapp/src/app/main-nav/main-nav.component.html
+++ b/webapp/src/app/main-nav/main-nav.component.html
@@ -4,7 +4,7 @@
       <a routerLink="/home" routerLinkActive="active">Strona Główna</a>
     </li>
     <li>
-      <a routerLink="/section" routerLinkActive="active">Działy</a>
+      <a routerLink="/dashboard/section" routerLinkActive="active">Działy</a>
     </li>
     <li>
       <a routerLink="/matura" routerLinkActive="active">Matura</a>
