Add responsive image into numbers sets section

--- a/webapp/src/app/dashboard/section/number-collections/number-collections.component.html
+++ b/webapp/src/app/dashboard/section/number-collections/number-collections.component.html
@@ -1,1 +1,4 @@
-<p>number-collections works!</p>
+<div class="content">
+  <p>Poniżej znajduje się zobrazowanie zbiorów liczbowych</p>
+  <img src="./assets/images/numbersSet.bmp" alt="Numbers Sets">
+</div>
