--- a/webapp/src/app/dashboard/section/section.component.html
+++ b/webapp/src/app/dashboard/section/section.component.html
@@ -1,5 +1,4 @@
-<p>section works!</p>
-<div>
+<div class="dashboard">
   <ul>
     <a routerLink='number-collections' routerLinkActive='active'>Zbiory Liczb</a>
   </ul>
