rename number-collections component and it's references into number-sets

--- a/webapp/src/app/dashboard/section/section.component.html
+++ b/webapp/src/app/dashboard/section/section.component.html
@@ -1,6 +1,6 @@
 <div class="dashboard">
   <ul>
-    <a routerLink='number-collections' routerLinkActive='active'>Zbiory Liczb</a>
+    <a routerLink='number-sets' routerLinkActive='active'>Zbiory Liczb</a>
   </ul>
   <ul>
     <a routerLink='functions' routerLinkActive='active'>Funkcje</a>
