Done first version of content of number-sets component

--- a/webapp/src/app/dashboard/section/number-sets/number-sets.component.html
+++ b/webapp/src/app/dashboard/section/number-sets/number-sets.component.html
@@ -3,6 +3,28 @@
   <img src="./assets/images/numberSets.jpg" alt="Number Sets">
   <div class="description">
     <h4>Liczby Naturalne</h4>
-    <p>To liczby całkowite dodatnie</p>
+    <p>Liczby całkowite dodatnie za wyjątkiem zera: N = {{'{ 1, 2, 3, 4... }'}}</p>
+
+    <h4>Liczby Całkowite</h4>
+    <p>Liczby naturalne, oraz ich ujemne odpowiedniki (liczby przeciwne), łącznie z liczbą zero:<br>
+      Z = {{'{ ... -3, -2, -1, 0, 1, 2, 3... }'}}</p>
+
+    <h4>Liczby Wymierne</h4>
+    <p>
+      Wszystkie liczby całkowite, oraz te, które można przedstawić za pomocą ułamka zwykłego
+      <span class="frac"><sup>p</sup><span>&frasl;</span><sub>q</sub></span>:<br>
+      Q = 1&nbsp;<span class="frac"><sup>1</sup><span>&frasl;</span><sub>2</sub></span>,
+      -5&nbsp;<span class="frac"><sup>3</sup><span>&frasl;</span><sub>4</sub></span>,
+      <span class="frac"><sup>5</sup><span>&frasl;</span><sub>1</sub></span><br>
+      Formalny zapis: Q = <span class="frac"><sup>p</sup><span>&frasl;</span><sub>q</sub></span>: p, q: &isin; Z &and; q &#8800; 0
+    </p>
+
+    <h4>Liczby Niewymierne</h4>
+    <p>Liczby, których nie można przedstawić za pomocą ułamka zwykłego. Liczby te mają rozwinięcie dziesiętne nieskończone nieokresowe:<br>
+      IQ = {{'{&radic;2, &radic;5, &#960;}'}}
+    </p>
+
+    <h4>Liczby Rzeczywiste</h4>
+    <p>To wszystkie liczby wymierne i niewymierne.</p>
   </div>
 </div>
