Add global font familly

--- a/webapp/src/app/app.component.html
+++ b/webapp/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-main-nav></app-main-nav>
 <div class="content">
-  <h3>{{title}}</h3>
+  <div class="title">
+    <h3>{{title}}</h3>
+  </div>
   <router-outlet></router-outlet>
 </div>
