--- a/webapp/src/app/dashboard/section/functions/functions.component.html
+++ b/webapp/src/app/dashboard/section/functions/functions.component.html
@@ -1,1 +1,11 @@
-<p>functions works!</p>
+<div class="blocks">
+  <div class="block-details">
+    Funkcja Liniowa
+  </div>
+  <div class="block-details">
+    Funkcja Kwadratowa
+  </div>
+  <div class="block-details">
+    Funkcja Wykładnicza
+  </div>
+</div>
