--- a/webapp/src/app/main-nav/main-nav.component.scss
+++ b/webapp/src/app/main-nav/main-nav.component.scss
@@ -1,17 +1,27 @@
 .nav{
   width: 25%;
   max-width: 190px;
-  background-color: gray;
   vertical-align: top;
   display: inline-block;
 }
 
-ul{
-  list-style-type: none;
-  padding: 4%;
+.nav ul{
+  padding: 0;
   margin: 0;
+  list-style-type: none;
 }
 
-li{
-  padding: 2%;
+.nav li{
+  padding: 8px;
+  margin-bottom: 8px;
+  background-color: #33b5e5;
+}
+
+.nav a{
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.nav li:hover{
+  background-color: #0099cc;
 }
