Display elements of main nav as block

--- a/webapp/src/app/dashboard/section/number-sets/number-sets.component.html
+++ b/webapp/src/app/dashboard/section/number-sets/number-sets.component.html
@@ -1,4 +1,4 @@
-<div class="content">
+<div class="number-sets-content">
   <p>Poniżej znajduje się zobrazowanie zbiorów liczbowych</p>
   <img src="./assets/images/numberSets.jpg" alt="Number Sets">
   <div class="description">
