--- a/webapp/src/app/home/home.component.html
+++ b/webapp/src/app/home/home.component.html
@@ -1,5 +1,7 @@
-<p>
-  Strona oferująca kompleksową pomoc w opanowaniu materiału maturalnego w zakresie podstawowym.
-  Znajdziesz tu zagadnienia teoretyczne, możliwość sprawdzenia w jaki sposób zachowują się funkcje matematyczne w zależności
-  od wprowadzonych danych, a także zadania dla maturzystów.
-</p>
+<div class="home-content">
+  <p>
+    Strona oferująca kompleksową pomoc w opanowaniu materiału maturalnego w zakresie podstawowym.
+    Znajdziesz tu zagadnienia teoretyczne, możliwość sprawdzenia w jaki sposób zachowują się funkcje matematyczne w zależności
+    od wprowadzonych danych, a także zadania dla maturzystów.
+  </p>
+</div>
