--- a/webapp/src/app/main-nav/main-nav.component.scss
+++ b/webapp/src/app/main-nav/main-nav.component.scss
@@ -12,16 +12,18 @@
 }
 
 .nav li{
-  padding: 8px;
   margin-bottom: 8px;
   background-color: #33b5e5;
+  width: 100%;
 }
 
-.nav a{
+.nav li a{
   color: #ffffff;
+  padding: 8px;
   text-decoration: none;
+  display: block;
 }
 
-.nav li:hover{
+.nav li :hover{
   background-color: #0099cc;
 }
