Add sample chart to the linear function

--- a/webapp/src/app/dashboard/section/functions/functions.component.html
+++ b/webapp/src/app/dashboard/section/functions/functions.component.html
@@ -1,11 +1,17 @@
-<div class="blocks">
+<div class="functions-content">
   <div class="block-details">
-    Funkcja Liniowa
+    <a routerLink="/dashboard/section/functions/linear-function" routerLinkActive="active">Funkcja Liniowa</a>
   </div>
   <div class="block-details">
-    Funkcja Kwadratowa
+    <a routerLink="/dashboard/section/functions/quadratic-function" routerLinkActive="active">Funkcja Kwadratowa</a>
   </div>
   <div class="block-details">
-    Funkcja Wykładnicza
+    <a routerLink="/dashboard/section/functions/exponential-function" routerLinkActive="active">Funkcja Wykładnicza</a>
   </div>
+
+  <p>
+    Funkcją nazywamy takie przyporządkowanie określone na zbiorze <i>X</i>
+    posiadające wartości ze zbioru <i>Y</i>, w którym każdemu elementowi ze zbioru <i>X</i> odpowiada
+    dokładnie jeden element ze zbioru <i>Y</i>.
+  </p>
 </div>
