--- a/webapp/src/app/dashboard/section/functions/linear-function/linear-function.component.scss
+++ b/webapp/src/app/dashboard/section/functions/linear-function/linear-function.component.scss
@@ -2,8 +2,13 @@
   margin: 5px;
 }
 
-#chart{
+.chart{
   display: block;
   width: 70%;
   height: 350px;
+  min-width: 350px;
+}
+
+.input-group{
+  width: 30%;
 }
